# canals-io-warehouse-mockup

./: .gitignore  Canals.postman_collection.json  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.kiro/specs/order-management-api/: .config.kiro  design.md  requirements.md  tasks.md
app/: __init__.py  config.py  error_handlers.py  exceptions.py
app/data_store/: __init__.py  order_data_store.py  warehouse_data_store.py
app/dto/: __init__.py  order.py  payment.py
app/models/: __init__.py  order.py  order_item.py  payment.py  product.py  warehouse.py  warehouse_inventory.py
app/queries/order/: insert_order.sql  insert_order_item.sql  insert_payment.sql  update_order_status.sql
app/queries/warehouse/: decrement_reserved_qty.sql  finalize_inventory_success.sql  fulfillment.sql  increment_reserved_qty.sql  lock_inventory.sql
app/routes/: orders.py
app/services/: customer_payment_store.py  geocoder.py  order_service.py  payment.py  warehouse_service.py
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_seed_data.py
